--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <h1> Navigation </h1>
 
-<router-outlet></router-outlet>
+<a routerLink="/home">Home</a>
+<a routerLink="/documents">Docs</a>
 
-<h1> Footer </h1>
+<router-outlet></router-outlet>
