Added NG Bootstrap Styles

--- a/src/app/documents/documents.component.html
+++ b/src/app/documents/documents.component.html
@@ -1,15 +1,14 @@
-<h1>{{ pageTitle }}</h1>
-
-<hr />
-<div *ngFor="let doc of documents">
-	<h3>{{ doc.title }}</h3>
-	<em> {{ doc.description }}</em>
-	<div>
-		<a href="{{ doc.file_url }}">Download File</a>
+<div class="container">
+	<h1 class="headline">{{ pageTitle }} </h1>
+	<div class="card" *ngFor="let doc of documents">
+		<img class="card-img-top" src="{{ doc.image_url }}" alt="Card Image Cap" width="100%">
+		<div class="card-block">
+			<h4 class="card-title">{{ doc.title }}</h4>
+			<p class="card-text">{{ doc.description }}</p>
+			<p class="card-text"><small class="text-muted">{{ doc.updated_at }}</small></p>
+			<div>
+				<a class="btn btn-lg btn-primary" href="{{ doc.file_url }}">Download File</a>
+			</div>
+		</div>
 	</div>
-	<p>
-		{{ doc.updated_at }}
-		{{ doc.image_url }}
-	</p>
-	<hr />
 </div>
