--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,29 @@
-<h1> Navigation </h1>
+<nav class="navbar navbar-toggleable-md navbar-light bg-faded nav-styles">
+	<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="navbar-toggler-icon"></span>
+	</button>
+	<a class="navbar-brand" routerLink="/home">Freelance Bootcamp</a>
+	<div class="collapse navbar-collapse" id="navbarSupportedContent">
+		<ul class="navbar-nav mr-auto">
+			<li class="nav-item">
+				<a class="nav-link" routerLink="/home" routerLinkActive="active">Home</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" routerLink="/documents" routerLinkActive="active">Docs</a>
+			</li>
+			<li class="nav-item dropdown">
+				<div ngbDropdown class="d-inline-block dropdown-links">
+					<button class="btn btn-outline-primary" id="proposalDropdown" ngbDropdownToggle>Proposals</button>
+					<div class="dropdown-menu" aria-labelledby="proposalDropdown">
+						<a class="dropdown-item" routerLink="/proposals" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true}">List All</a>
+						<a class="dropdown-item" routerLink="/proposals/new" routerLinkActive="active">New Proposal</a>
+					</div>
+				</div>
+			</li>
+		</ul>
+	</div>
+</nav>
 
-<a routerLink="/home">Home</a>
-<a routerLink="/documents">Docs</a>
-<a routerLink="/proposals">Proposals</a>
-<a routerLink="/proposals/new">New Proposal</a>
-
-<router-outlet></router-outlet>
+<div class="app-body">
+	<router-outlet></router-outlet>
+</div>
