Finished Styling, Finished Prep for API usage.

--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,3 +1,6 @@
 <div class="container">
-	<h1 class="headline"> {{ pageTitle }} </h1>
+	<div class="jumbotron">
+			<h1> {{ pageTitle }} </h1>
+			<p class="lead">Everything you need to manage your freelance business.</p>
+	</div>
 </div>
