--- a/src/app/proposal/proposal-new.component.html
+++ b/src/app/proposal/proposal-new.component.html
@@ -3,7 +3,7 @@
 	<div class="card form-container">
 		<div class="row">
 			<div class="col-md-6 border-right">
-				<form #proposalForm="ngForm">
+				<form (ngSubmit)="createProposal(proposal)" #proposalForm="ngForm">
 					<div class="form-group">
 						<label class="col-form-label" for="customer">Customer Name</label>
 						<input type="text"
@@ -104,12 +104,17 @@
 						<input type="text"
 							id="client_email"
 							placeholder="admin@customer.com"
-							required
 							name="client_email"
 							class="form-control"
 							#client_email="ngModel"
 							[(ngModel)]="proposal.client_email"
 						>
+					</div>
+					<button type="submit" class="btn btn-outline-primary btn-lg" [disabled]="!proposalForm.form.valid" [hidden]="submitted">
+						Generate Proposal
+					</button>
+					<div [hidden]="!submitted" class="alert alert-success" role="alert" >
+						Your proposal has been generated <a class="alert-link" routerLink="/proposals">View all proposals</a>
 					</div>
 				</form>
 			</div>
@@ -121,7 +126,7 @@
 				<p>To successfully build out the application I will be utilizing {{ proposal.tools }}, and a number of other tools to ensure that the project follows industry wide best practices.
 				Ensuring that you are fully informed is one of my top priorities, so in addition to incorporating everything that we discussed, I will also be creating a project management dashboard and sending you a project update message daily so that you can have a transparent view of the development as it takes place.</p>
 
-				<p>To accomplish the project and meet the requirements that we discussed, I am estimating that it will take {{ proposal.estimated_hours }} hours in development time to complete. The project should take {{ proposal.weeks_to_complete }} weeks to complete and with my hourly rate of {{ proposal.hourly_rate }}/hour, the estimated total will be {{ proposal.hourly_rate * proposal.estimated_hours | currency:'USD':true:'.0'}}.</p>
+				<p>To accomplish the project and meet the requirements that we discussed, I am estimating that it will take {{ proposal.estimated_hours }} hours in development time to complete. The project should take {{ proposal.weeks_to_complete }} weeks to complete and with my hourly rate of {{ proposal.hourly_rate }}/hour, the estimated total will be {{ proposal.hourly_rate * proposal.estimated_hours | currency:'USD':'symbol':'.0'}}.</p>
 
 				<p>The next step from here is to set up a meeting to finalize the project and sign contracts.</p>
 
